# Athena-Fintech

./: .env.example  .gitignore  PlanCodeStructure.md  README.md  docker-compose.yml  miniplan.md  plan.md  pyproject.toml  startupcommands.md
src/athena/: __init__.py  config.py
src/athena/llm/: __init__.py  client.py
src/athena/storage/: __init__.py  db_manager.py
src/athena/storage/models/: __init__.py  base.py  chunks.py  filings.py  ingest_runs.py  tickers.py
