[project]
name = "athena"
version = "0.1.0"
description = "Athena — Investment Intelligence Co-Pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "instructor>=1.6",
    "langsmith>=0.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena"]

# --- Ruff: linter + formatter (replaces flake8, black, isort) ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "RUF", # ruff-specific
    "ASYNC", # async pitfalls
]
ignore = ["E501"]  # line length — formatter handles it

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts in tests are fine

# --- Mypy: strict typing ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src/athena"]

# Some libraries don't ship type stubs; relax for those
[[tool.mypy.overrides]]
module = ["instructor.*", "langsmith.*"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
